# Cypherock_C-_Task

./: .gitignore  README.md
client-ts/: package-lock.json  package.json
client-ts/proto/: message_client.proto
client-ts/src/: index.ts
client-ts/src/crypto/: cryptoUtils.ts  testScalar.ts
client-ts/src/network/: TcpClient.ts
client-ts/src/proto/: message.ts
server-cpp/: CMakeLists.txt
server-cpp/include/server/crypto/: CryptoUtils.hpp
server-cpp/include/server/network/: TcpServer.hpp
server-cpp/proto/: message.proto
server-cpp/src/: main.cpp
server-cpp/src/crypto/: CryptoUtils.cpp
server-cpp/src/network/: TcpServer.cpp
